---------------------------------- 2022-04-29 17:51:12 22.4.29
qc pass: interop1: vpls/ldp cw over bgp
qc pass: interop1: ethernet over mpls cw
qc pass: vpls/ldp cw over ebgp
qc pass: vpls/ldp cw over ibgp
qc pass: vpls/ldp cw over bgp additional path
qc pass: vpls/ldp cw over ibgp rr
qc pass: vpls/ldp cw over confed bgp
qc pass: vpls/ldp cw over bgp route server
qc pass: vpls/ldp cw over bgp with soft-reconfig
qc pass: unicast+vpls/ldp cw over bgp
qc pass: unicast+vpls/ldp cw over bgp with soft-reconfig
qc pass: unicast+vpls/ldp cw over bgp additional path
---------------------------------- 2022-05-05 13:33:24 22.5.5
todo: sho run server
---------------------------------- 2022-05-08 07:29:17 22.5.8
todo: multiple listen stanzas for bgp listen
todo: backplane header in the dataplanes with bridge_id, vrf_id and nexthop_id
---------------------------------- 2022-05-08 08:49:15 22.5.8
no todo: multiple listen stanzas for bgp listen
---------------------------------- 2022-05-09 17:17:48 22.5.9
qc pass: redistribution filtering with prefixlist in routemap
qc pass: redistribution filtering with prefixlist in routepolicy
qc pass: redistribution filtering with accesslist in routemap
qc pass: redistribution filtering with accesslist in routepolicy
---------------------------------- 2022-05-09 18:05:52 22.5.9
qc pass: redistribution filtering with routepolicy in routemap
qc pass: redistribution filtering with routemap in routepolicy
---------------------------------- 2022-05-10 05:10:26 22.5.10
todo: backup path support to the spf class
todo: wcmp support to the spf class
todo: bgp shadow route reflection
---------------------------------- 2022-05-10 18:06:28 22.5.10
no todo: backplane header in the dataplanes with bridge_id, vrf_id and nexthop_id
todo: backplane/stacking capability
---------------------------------- 2022-05-10 19:49:37 22.5.10
no todo: sho run server
---------------------------------- 2022-05-15 11:12:50 22.5.15
qc pass: p4lang: routing over backplane