@@ -352,6 +352,10 @@ ipv6 route v1 4321::105 ffff:ffff:ffff:ffff:ffff:ffff:ffff:ffff 1234:4::1
 !
 
 
+r1 tping 100 10 10.11.12.111 vrf v9
+r1 tping 100 10 10.12.13.111 vrf v9
+r1 tping 100 10 10.13.14.111 vrf v9
+
 r1 tping 100 10 1.1.1.2 vrf v1
 r1 tping 100 10 1234:1::2 vrf v1
 r1 tping 100 10 1.1.2.2 vrf v1
