@@ -24,6 +24,7 @@ import net.freertr.pack.packHolder;
 import net.freertr.pipe.pipeLine;
 import net.freertr.tab.tabAceslstN;
 import net.freertr.tab.tabGen;
+import net.freertr.tab.tabLabel;
 import net.freertr.tab.tabListing;
 import net.freertr.tab.tabRoute;
 import net.freertr.tab.tabRouteEntry;
@@ -366,6 +367,8 @@ public class servP4langCfg implements ifcUp {
             servP4langBr ntry = new servP4langBr(br.num);
             ntry.doClear();
             ntry.br = br;
+            ntry.lab = tabLabel.allocate(24);
+            ntry.lab.setFwdDrop(24);
             expBr.put(ntry);
             return false;
         }
@@ -599,6 +602,7 @@ public class servP4langCfg implements ifcUp {
                 cmd.error("no such export");
                 return false;
             }
+            tabLabel.release(ntry.lab, 24);
             return false;
         }
         if (s.equals("backplane")) {
