@@ -1745,6 +1745,7 @@ qc pass: p4lang: l3vpn over pppoe mpls
 qc pass: p4lang: l3vpn over gre mpls
 qc pass: p4lang: l3vpn over l2tp mpls
 qc pass: p4lang: routing over backplane
+qc pass: p4lang: bridging over backplane
 qc pass: qos ingress transmit action
 qc pass: qos egress transmit action
 qc pass: qos ingress drop action
