@@ -12,7 +12,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v22.5.15-cur, done by cs@nop.<br/>
-tested: 2022-05-15 11:44:22, took 00:08:24, with 80 workers, on 2879 cases, 0 failed, 0 traces, 0 retries<br/>
+tested: 2022-05-15 13:52:48, took 00:08:07, with 80 workers, on 2880 cases, 0 failed, 0 traces, 0 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
@@ -1763,6 +1763,7 @@ jvm: ./rtr.bin<br/>
 <tr><td><a href="http://sources.freertr.org/cfg/p4lang-rout209.tst">p4lang-rout209.tst</a></td><td>success</td><td>p4lang: l3vpn over gre mpls</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/p4lang-rout210.tst">p4lang-rout210.tst</a></td><td>success</td><td>p4lang: l3vpn over l2tp mpls</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/p4lang-rout211.tst">p4lang-rout211.tst</a></td><td>success</td><td>p4lang: routing over backplane</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/p4lang-rout212.tst">p4lang-rout212.tst</a></td><td>success</td><td>p4lang: bridging over backplane</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/qos-action01.tst">qos-action01.tst</a></td><td>success</td><td>qos ingress transmit action</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/qos-action02.tst">qos-action02.tst</a></td><td>success</td><td>qos egress transmit action</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/qos-action03.tst">qos-action03.tst</a></td><td>success</td><td>qos ingress drop action</td></tr>
